[project]
name = "learning-flask-framework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "coverage>=7.11.1",
    "flask>=3.1.2",
    "pytest>=8.4.2",
    "ruff>=0.14.3",
]

[tool.pytest.ini_options]
testpaths = ["."]

[tool.coverage.run]
branch = true
source = ["."]